// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteCard should pass snapshot test 1`] = `
<div
  className="NoteCard--background-lavender"
  draggable={true}
  onDragOver={[Function]}
  onDragStart={[Function]}
  onDrop={[Function]}
>
  <h3
    className="NoteCard--h3"
  >
    Workout
  </h3>
  <div>
    <span
      className="NoteCard--span--incomplete"
      key="lpo"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        20 situps
      </p>
    </span>
    <p
      className="NoteCard--completed-notice"
      key="complete-notice"
    >
      1 Completed Item
    </p>
    <span
      className="NoteCard--span--complete"
      key="lqw"
    >
      <img
        alt="checked icon"
        className="NoteCard--icon--checked"
        onClick={[Function]}
        src="checkedicon.svg"
      />
      <p
        className="NoteForm--p--complete"
      >
        15 pushups
      </p>
    </span>
  </div>
  <span
    className="NoteCard--icon-container"
  >
    <Link
      replace={false}
      to="/notes/rzz"
    >
      <img
        alt="edit icon"
        className="NoteCard--edit-icon"
        src="edit.svg"
      />
    </Link>
    <img
      alt="delete icon"
      className="NoteCard--delete-icon"
      onClick={[Function]}
      src="delete.svg"
    />
  </span>
</div>
`;

exports[`NoteCard should pass snapshot test when there are more than 10 items 1`] = `
<div
  className="NoteCard--background-undefined"
  draggable={true}
  onDragOver={[Function]}
  onDragStart={[Function]}
  onDrop={[Function]}
>
  <h3
    className="NoteCard--h3"
  >
    Grocery shopping
  </h3>
  <div>
    <span
      className="NoteCard--span--incomplete"
      key="rey"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <span
      className="NoteCard--span--incomplete"
      key="fde"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <span
      className="NoteCard--span--incomplete"
      key="dfg"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <span
      className="NoteCard--span--incomplete"
      key="ert"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <span
      className="NoteCard--span--incomplete"
      key="tuy"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <span
      className="NoteCard--span--incomplete"
      key="jkh"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <span
      className="NoteCard--span--incomplete"
      key="rew"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <span
      className="NoteCard--span--incomplete"
      key="lkj"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <span
      className="NoteCard--span--incomplete"
      key="uip"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <span
      className="NoteCard--span--incomplete"
      key="xcz"
    >
      <img
        alt="unchecked icon"
        className="NoteCard--icon--unchecked"
        onClick={[Function]}
        src="uncheckedicon.svg"
      />
      <p
        className="NoteForm--p--incomplete"
      >
        Stop by King Soopers
      </p>
    </span>
    <p
      className="NoteCard--ellipsis"
      key="..."
    >
      ...
    </p>
  </div>
  <span
    className="NoteCard--icon-container"
  >
    <Link
      replace={false}
      to="/notes/bah"
    >
      <img
        alt="edit icon"
        className="NoteCard--edit-icon"
        src="edit.svg"
      />
    </Link>
    <img
      alt="delete icon"
      className="NoteCard--delete-icon"
      onClick={[Function]}
      src="delete.svg"
    />
  </span>
</div>
`;
